fix: grid scrollbars always visible

--- a/src/frontend/scss/grid.scss
+++ b/src/frontend/scss/grid.scss
@@ -3,17 +3,6 @@
   font-family: 'GDS Transport', arial, sans-serif;
   position: relative;
 
-  ::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 2px;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    border-radius: 2px;
-    background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
-  }
-
   #grid-overlay {
     position: absolute;
     top: 0;
@@ -43,4 +32,24 @@
 .ag-theme-alpine,
 .ag-theme-alpine .ag-row {
   font-size: 19px;
+}
+
+.ag-body-horizontal-scroll.ag-scrollbar-invisible {
+  pointer-events: all !important;
+}
+
+
+.ag-body-viewport-wrapper.ag-layout-normal {
+  overflow-x: scroll;
+  overflow-y: scroll;
+}
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0,0,0,.5);
+  box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
